# Storm

./: .env.example  .gitignore  compose.yml  haproxy.cfg  pyproject.toml
storm-frontend/: package.json  tsconfig.json  vite.config.ts
storm-frontend/project.inlang/: settings.json
storm-frontend/src/: app.css  app.html  app.scss
storm-frontend/src/lib/components/: navbar.svelte
storm-frontend/src/lib/components/card/: postCard.svelte
storm-frontend/src/lib/components/modals/: createPostModal.svelte
storm-frontend/src/lib/components/quill/: QuillEditor.svelte
storm-frontend/src/lib/stores/: posts.ts
storm-frontend/src/lib/stores/login/: login.ts
storm-frontend/src/lib/stores/posts/: posts.ts
storm-frontend/src/lib/stores/register/: register.ts
storm-frontend/src/lib/types/: posts.ts  user.ts
storm-frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
storm-frontend/src/routes/demo/paraglide/: +page.svelte
storm-frontend/src/routes/login/: +page.svelte
storm-frontend/src/routes/register/: +page.svelte
storm_api/: .gitignore  __init__.py  manage.py
storm_api/apps/authentication/: api.py  schemas.py  services.py
storm_api/apps/comments/: api.py  models.py  schemas.py  services.py
storm_api/apps/comments/management/commands/: seed_comments.py
storm_api/apps/comments/migrations/: 0001_initial.py
storm_api/apps/posts/: api.py  models.py  schemas.py  services.py
storm_api/apps/posts/management/commands/: seed_posts.py
storm_api/apps/posts/migrations/: 0001_initial.py  0002_alter_post_privacy_setting.py  post_0001.py
storm_api/apps/users/: api.py  models.py  schemas.py  services.py
storm_api/apps/users/management/commands/: seed_users.py
storm_api/apps/users/migrations/: 0001_initial.py
storm_api/common/: auth.py
storm_api/common/management/: __init__.py
storm_api/common/management/commands/: seed_data.py
storm_api/core/: asgi.py  automigrations.py  settings.py  telemetry.py  urls.py  wsgi.py
